[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aris"
version = "0.1.0"
description = "ARIS (Analysis • Reasoning • Intelligence • Strategy) - Node 2 CLI"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Joe Murillo" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
aris = "aris.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["aris*"]
exclude = ["logs*", "tests*", "scripts*"]
